tests/java5/generics/decp/Basic2.aj
// error, can't implement two variants of a generic type
interface I<T>{ }

public class Basic implements I<String> {

  public static void main(String[]argv) {
  }
}

aspect X{
    declare parents: Basic implements I<Integer>; // error
}
